# kilobotga

./: README.md
src/: CMakeLists.txt
src/cmake/: ARGoSBuildChecks.cmake
src/controllers/: CMakeLists.txt  abstractga_ctrl.cpp  abstractga_ctrl.h  demo_ctrl.cpp  demo_ctrl.h  pd_ctrl.cpp  pd_ctrl.h
src/controllers/demo/: CMakeLists.txt  demo_ctrl.cpp  demo_ctrl.h
src/controllers/kilobot_clustering/: CMakeLists.txt  kilobot_clustering.cpp  kilobot_clustering.h
src/embedding/: CMakeLists.txt
src/embedding/clustering/: CMakeLists.txt  experiment.argos  main.cpp
src/experiments/: demo.argos  experiment.argos  kilobot_clustering.argos  pd.argos
src/loop_functions/: CMakeLists.txt  abstractga_lf.cpp  abstractga_lf.h  demo_lf.cpp  demo_lf.h  pd_lf.cpp  pd_lf.h  simplega.h
src/loop_functions/clustering_loop_functions/: CMakeLists.txt  clustering_loop_functions.cpp  clustering_loop_functions.h  simplega.cpp  simplega.h
src/loop_functions/demo/: CMakeLists.txt  demo_lf.cpp  demo_lf.h  simplega.cpp  simplega.h
